samples/_failures_safe/1761715285_bebe04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8984ff1.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_a8984ff1.c:180:9: error: expected expression at end of input
  180 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_a8984ff1.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a8984ff1.c:180:9: error: expected declaration or statement at end of input
